# nftopia-stellar

nftopia-backend/: README-SETUP.md  docker-compose.yml  package-lock.json  package.json
nftopia-backend/migrations/: 20260325010000_create_listings.sql
nftopia-backend/src/: app.module.ts  main.ts
nftopia-backend/src/config/: stellar.config.ts
nftopia-backend/src/interceptors/: stellar-error.interceptor.spec.ts  stellar-error.interceptor.ts  stellar-logging.interceptor.spec.ts  stellar-logging.interceptor.ts  stellar-response.interceptor.spec.ts  stellar-response.interceptor.ts  stellar-timeout.interceptor.spec.ts  stellar-timeout.interceptor.ts  stellar-transform.interceptor.spec.ts  stellar-transform.interceptor.ts  stellar.interceptor.utils.ts
nftopia-frontend/: package-lock.json
nftopia-frontend/components/: CollectionCard.tsx  Footer.tsx  PopularThisWeek.tsx  explore-categories.tsx  live-auctions.tsx  navbar.tsx  todays-picks.tsx  top-sellers.tsx  user-dropdown.tsx
nftopia-frontend/public/: sw.js
nftopia-stellar/contracts/marketplace_settlement/: Cargo.toml
nftopia-stellar/contracts/marketplace_settlement/src/: atomic_swap.rs  auction_engine.rs  events.rs  fee_manager.rs  lib.rs  royalty_distributor.rs  settlement_core.rs  test.rs
nftopia-stellar/contracts/marketplace_settlement/src/security/: frontrun_protection.rs  reentrancy_guard.rs
nftopia-stellar/contracts/marketplace_settlement/src/storage/: allowlist_store.rs  mod.rs
nftopia-stellar/contracts/marketplace_settlement/src/utils/: asset_utils.rs  time_utils.rs
(+45 files in other folders)
